# epic-tv-fighting

./: .gitignore  CMakeLists.txt  README.md  launch
asset/: credits.cred  game.settings  text.localization
asset/datas/effects/: TVCredits.fx  TVExit.fx  TVNoise.fx  TVOption.fx  TVPlay.fx  dancingPrinny.fx  explosion.fx
asset/datas/players/rukusan/: rukusan.player  rukusanCombos.tree  rukusan_block.seq  rukusan_death.seq  rukusan_hit.seq  rukusan_idle.seq  rukusan_jump.seq  rukusan_kick_1.seq  rukusan_kick_2.seq  rukusan_punch_1.seq  rukusan_punch_2.seq  rukusan_roll.seq  rukusan_special.seq  rukusan_versus.seq  rukusan_victory.seq  rukusan_walking.seq
asset/datas/players/tralalathan/: tralalathan.player  tralalathanCombo.tree  tralalathan_block.seq  tralalathan_death.seq  tralalathan_hit.seq  tralalathan_idle.seq  tralalathan_jump.seq  tralalathan_kick_1.seq  tralalathan_kick_2.seq  tralalathan_punch_1.seq  tralalathan_punch_2.seq  tralalathan_roll.seq  tralalathan_special.seq  tralalathan_victory.seq  tralalathan_walk.seq
asset/datas/scenes/: bathHouse.scene  deathStar.scene  dojo.scene  hell.scene  stonehenge.scene
src/: .CMakeLists.txt.swp  AnimationSequence.cpp  AnimationSequence.h  CMakeLists.txt  Dash.cpp  Dash.h  EmitSound.cpp  EmitSound.h  Game.cpp  Game.h  LocalizationStrings.cpp  LocalizationStrings.h  ResourcePath.cpp  ResourcePath.h  Scene.cpp  Scene.h  Shoot.cpp  Shoot.h  State.cpp  State.h  attack_effect.h  ceciEstNotreMain.cpp
src/containers/: List.h  Stack.h  comboList.h  vector.h
src/gamestates/: CreditsState.cpp  CreditsState.h  GameState.cpp  GameState.h  GameplayState.cpp  GameplayState.h  MenuState.cpp  MenuState.h  OptionState.cpp  OptionState.h  PlayerSelectionState.cpp  PlayerSelectionState.h  VersusState.cpp  VersusState.h  VictoryState.cpp  VictoryState.h
src/managers/: CollisionManager.cpp  CollisionManager.h  GameStateManager.cpp  GameStateManager.h  ObjectManager.cpp  ObjectManager.h  SoundBufferManager.cpp  SoundBufferManager.h  TextureManager.cpp  TextureManager.h
src/objects/: Object.cpp  Object.h
src/objects/actors/: Actor.cpp  Actor.h
src/objects/actors/players/: GenericPlayer.cpp  GenericPlayer.h  Player.cpp  Player.h  PlayerGiranath.cpp  PlayerGiranath.h
src/objects/effects/: CustomFX.cpp  CustomFX.h  FXLoader.cpp  FXLoader.h  Fx.cpp  Fx.h
src/objects/projectiles/: Guntherken.cpp  Guntherken.h  Projectile.cpp  Projectile.h  ProjectileFactory.cpp  ProjectileFactory.h  prinnyInTheHat.cpp  prinnyInTheHat.h
src/physic/: BoxBody.cpp  BoxBody.h  Collision.cpp  Collision.h  PhysicBody.cpp  PhysicBody.h  PhysicWorld.cpp  PhysicWorld.h
tool/: CMakeLists.txt  SequenceMaker3000.cpp  math-luc.h
