SET(ROOT ${PATH_TOOLS})

SET(EXECUTABLE_NAME "sm3000")

SET(SOURCES
  "${ROOT}/SequenceMaker3000.cpp"
)

ADD_EXECUTABLE(${EXECUTABLE_NAME} ${SOURCES})

# Link to SFML
FIND_PACKAGE(SFML 2 COMPONENTS audio graphics window system REQUIRED)
INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${SFML_LIBRARIES})
